# Kicad-MCP-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/kicad_mcp/: __init__.py  connection.py  errors.py  server.py  tools_appearance.py  tools_board.py  tools_cli.py  tools_dimensions.py  tools_export.py  tools_footprints.py  tools_groups.py  tools_nets.py  tools_screenshot.py  tools_selection.py  tools_shapes.py  tools_text.py  tools_tracks.py  tools_vias.py  tools_zones.py  units.py
src/kicad_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/unit/: test_cli.py  test_errors.py  test_units.py
