[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "kicad-python>=0.7.0",
    "cairosvg>=2.7",
]

[project.scripts]
kicad-mcp = "kicad_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
